# hpml_know_distillation

./: .gitattributes  README.md  pyproject.toml
GRPO_profile/: README.md  grpo_profiler.ipynb  grpo_profiler.py  profiled_train_grpo.py  profiled_trainer.py  qwen25_3b_sft_grpo.yaml
GRPO_profile/train_bs-32-gc-True-vllm-False/: grpo_config.yaml
GRPO_profile/train_bs-32-gc-True-vllm-True/: grpo_config.yaml
RL_GRPO_train/: README.md  colab_dapo_train.ipynb  colab_grpo_train.ipynb  colab_gspo_train.ipynb  train_grpo.py
RL_GRPO_train/configs/: qwen25_3b_sft_dapo.yaml  qwen25_3b_sft_grpo.yaml  qwen25_3b_sft_gspo.yaml
RL_common/: README.md  pyproject.toml
RL_common/src/rl_common/: __init__.py  answers.py  config.py  data.py  eval.py  model.py  prompts.py  rewards.py
RL_common/tests/: test_common.py
RL_dryrun_rollout/: README.md  run.ipynb  run_rollout.py
SFT_data_generation/: README.md
SFT_profile/: README.md  base_model_val_results.json  qwen25_3b_llamafactory_lora_sft_colab_train.ipynb  sft_profile.ipynb  sft_profile_v2.ipynb  sft_profile_v3.ipynb  success.jsonl  train.ipynb
SFT_train/: README.md  base_model_val_results.json  qwen25_3b_llamafactory_lora_sft_colab_train.ipynb  train_qwen25_3b_lora_sft.yaml  val_results.json
benchmark/: README.md  gsm8k_benchmark_qwen2_5_3b.ipynb  gsm8k_benchmark_qwen2_5_3b_colab_(2).ipynb  gsm8k_benchmark_teacher.ipynb  gsm8k_student_distill.ipynb
env/: requirements.txt
prompts/: teacher_system_prompt.txt
results/: final_table.md
scripts/: run_all.sh
tests/: test_smoke.py
train/: README.md
(+70 files in other folders)
